# SpectralAnomalies

./: .gitignore  LICENSE  README.md  basic_tests.py  generate_data.py  generate_stellar_spectra.py  generate_stellar_spectra_anomalies.py  main.py  pyproject.toml  spectra.npz  spectra_anomalies.npz  train.py
documents/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  rhmf.bib
my-work/toy_npz_files/: spectra.npz
my-work/v0/: benchmark.py
notebooks/: .gitignore  RHMF_LRG.ipynb  RHMF_RVS.ipynb  RHMF_hotstars.ipynb  RVS_meets_RPCA_via_Claude_vibe.ipynb  RobustHMF.ipynb  clod.py  clod_sdss_lrg.py  make_pdf.py  rhmf.py
toms_work/: pyproject.toml
toms_work/experiments/demo/: benchmark.py  collect_data.py  demo.py  utils.py
toms_work/experiments/reading_data/: andy_example.py  read_meta.py  read_rvs.py
toms_work/experiments/rhmf_objective/: test_objective.py
toms_work/experiments/robusta-hmf-testing/: collect.py  scaling_llm.py  test.py  test_als_sgd_llm.py  v0_migration.py  ver2.py  ver2_nice_api.py  ver2_robust.py  ver2_unified.py
toms_work/experiments/rvs_spectra/: v0.py
toms_work/libraries/robusta-hmf/: README.md  pyproject.toml
toms_work/libraries/robusta-hmf/src/robusta_hmf/: __init__.py  als.py  convergence.py  frame.py  hmf.py  initialisation.py  likelihoods.py  main.py  new.py  opt_methods.py  regularisers.py  rhmf.py  rotations.py  state.py
toms_work/libraries/robusta-hmf/tests/: test_als.py  test_convergence.py  test_hmf.py  test_initialisation.py  test_likelihoods.py  test_rotations.py  test_state.py
toms_work/notes/: hmf_notes.tex  irls_notes.tex  robust_hmf_notes.tex
toms_work/toy_data_generators_llm_gen/: generate_stellar_spectra_old.py  generate_stellar_spectra_outliers.py
toms_work/v0/: train.py
toy_npz_files/: spectra_outliers.npz
v0/: generate_data.py
