[project]
name = "spectral-anomalies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "cmasher>=1.9.2",
    "equinox>=0.13.0",
    "ipykernel>=6.30.1",
    "jax>=0.7.1",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.5",
    "mpl-drip>=1.0.5",
    "optax>=0.2.5",
    "pandas>=2.3.2",
    "robusta-hmf",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[tool.uv.workspace]
members = ["libraries/robusta-hmf"]

[tool.uv.sources]
robusta-hmf = { workspace = true }
