[project]
name = "robusta-hmf"
version = "0.1.0"
description = "Robust heteroskedastic matrix factorisation in JAX."
readme = "README.md"
authors = [
    { name = "Tom Hilder", email = "tom.hilder.dlhp@gmail.com" },
    { name = "David W. Hogg", email = "TODO@TODO.com" },
]
requires-python = ">=3.13"
dependencies = ["jax>=0.7.1"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
